--- a/html/post.html
+++ b/html/post.html
@@ -96,7 +96,7 @@
       <!-- Insert code for Edit/Save button and  -->
 
     <p>Jimi</p>
-    <button id = "edit" class="editbtn">Edit <i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
+    <button id = "edit" class="editbtn"><span id="ed">Edit</span>  <i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
 </div>
 
 <div class="blogText">
